# acLife

./: .gitignore  README.md
client/: .gitignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
client/public/: site.webmanifest  sw.js
client/src/: App.tsx  index.css
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: main.rs
client/src/components/: AppShell.tsx  ModeToggle.tsx  PushService.tsx  Sidebar.tsx
client/src/components/calendar/: AgendaEvent.tsx  AgendaList.tsx  (+9 more)
client/src/context/: ApiContext.tsx  CalendarContext.tsx  StorageContext.tsx  UserContext.tsx
client/src/hooks/: useTapInteraction.ts
client/src/lib/: crypt.ts  gzip.ts  utils.ts  validators.ts
client/src/reducers/: calendarReducer.ts
client/src/types/: API.ts  Crypt.ts  Props.ts  Push.ts  ServerMetadata.ts  Storage.ts  Subscription.ts  User.ts  argon2-browser-bundled.d.ts
client/tests/: setup.ts
client/tests/calendar/: Calendar.test.tsx
client/tests/login/: LoginDialog.test.tsx
server/: .env.default  .gitignore  README.md  build.sh  go.mod  go.sum  main.go
server/constants/: constants.go
server/database/: database.go  stripe.go
server/handlers/: auth.go  calendar.go  error.go  handlers.go  middleware.go  stripe.go  user.go
server/push/: push.go
server/routes/: auth.go  calendar.go  routes.go  stripe.go  user.go
server/session/: auth.go  session.go
server/types/: calendar.go  metadata.go  push.go  types.go
server/utils/: crypt.go  utils.go
(+23 files in other folders)
